Audit ZGC serviceability constants